welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: recursive variable nums needs type
	var nums = new Array[Int] (nums.length)
                                   ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for (i <-0 to nums.length-1) {
               ^